--- a/app/prj.conf
+++ b/app/prj.conf
@@ -14,7 +14,7 @@ CONFIG_BT_DIS=y
 CONFIG_BT_DIS_MODEL="O-Invader"
 CONFIG_BT_DIS_MANUF="OriLive"
 CONFIG_BT_DIS_HW_REV=y
-CONFIG_BT_DIS_HW_REV_STR="2.0"
+CONFIG_BT_DIS_HW_REV_STR="0.2"
 CONFIG_BT_DIS_FW_REV=y
 CONFIG_BT_DIS_FW_REV_STR="Q4 2023"
 
@@ -25,6 +25,13 @@ CONFIG_BT_BAS=y
 CONFIG_ADC=y
 CONFIG_ADC_ASYNC=y
 CONFIG_ADC_NRFX_SAADC=y
+
+# SPI
+CONFIG_SPI=y
+
+# CONFIG_SPI_NRFX=y
+# CONFIG_SPI_SLAVE=y
+# CONFIG_SPI_ASYNC=y
 
 # Random number generator
 CONFIG_TEST_RANDOM_GENERATOR=y
