--- a/app/CMakeLists.txt
+++ b/app/CMakeLists.txt
@@ -1,7 +1,7 @@
 cmake_minimum_required(VERSION 3.20.0)
 
 find_package(Zephyr REQUIRED HINTS $ENV{ZEPHYR_BASE})
-project(bugpack_base)
+project(bugpack_base LANGUAGES C)
 
 # Fetch all component source files
 file(GLOB_RECURSE COMPONENT_SOURCES src/components/*.c)
