--- a/app/boards/arm/o-invader/o-invader.dts
+++ b/app/boards/arm/o-invader/o-invader.dts
@@ -1,4 +1,3 @@
-
 /dts-v1/;
 #include <nordic/nrf52833_qdaa.dtsi>
 
@@ -14,24 +13,15 @@
 		zephyr,sram = &sram0;
 		zephyr,flash = &flash0;
 		zephyr,code-partition = &slot0_partition;
-	};
-};
-
-&pinctrl {
-    spi0_default: spi0_default {
-        group1 {
-            psels = <NRF_PSEL(SPIM_SCK, 0, 5)>,
-            <NRF_PSEL(SPIM_MOSI, 1, 9)>,
-            <NRF_PSEL(SPIM_MISO, 0, 11)>;
-        };
+        zephyr,storage-partition = &storage_partition;
     };
 
-    spi0_sleep: spi0_sleep {
-        group1 {
-            psels = <NRF_PSEL(SPIM_SCK, 0, 5)>,
-            <NRF_PSEL(SPIM_MOSI, 1, 9)>,
-            <NRF_PSEL(SPIM_MISO, 0, 11)>;
-            low-power-enable;
+    leds {
+        compatible = "gpio-leds";
+        status = "okay";
+        led1: led_1 {
+            gpios = <&gpio0 9 GPIO_ACTIVE_LOW>;
+            label = "LED 1";
         };
     };
 };
@@ -50,14 +40,6 @@
 
 &adc {
     status = "okay";
-};
-
-&spi0 {
-    compatible = "nordic,nrf-spi";
-    status = "okay";
-    pinctrl-0 = <&spi0_default>;
-    pinctrl-1 = <&spi0_sleep>;
-    pinctrl-names = "default", "sleep";
 };
 
 &flash0 {
