--- a/app/boards/arm/o-invader/o-invader_defconfig
+++ b/app/boards/arm/o-invader/o-invader_defconfig
@@ -11,6 +11,9 @@ CONFIG_ARM_MPU=y
 # Enable hardware stack protection
 CONFIG_HW_STACK_PROTECTION=y
 
+# Disable NFC
+CONFIG_NFCT_PINS_AS_GPIOS=y
+
 # Enable RTT
 CONFIG_USE_SEGGER_RTT=y
 
