--- a/app/prj.conf
+++ b/app/prj.conf
@@ -1,7 +1,6 @@
 # Bluetooth configuration
 CONFIG_BT=y
 CONFIG_BT_DEVICE_NAME="O-Invader"
-CONFIG_BT_LL_SW_SPLIT=y
 CONFIG_BT_PERIPHERAL=y
 CONFIG_BT_USER_DATA_LEN_UPDATE=y
 CONFIG_BT_CTLR_DATA_LENGTH_MAX=251
@@ -27,7 +26,9 @@ CONFIG_ADC_ASYNC=y
 CONFIG_ADC_NRFX_SAADC=y
 
 # SPI
+CONFIG_GPIO=y
 CONFIG_SPI=y
+CONFIG_SPI_SLAVE=y
 
 # CONFIG_SPI_NRFX=y
 # CONFIG_SPI_SLAVE=y
@@ -51,6 +52,16 @@ CONFIG_TIMESLICE_PRIORITY=0
 
 # Logging configuration
 CONFIG_LOG=y
+
+# Power Management
+CONFIG_PM=y
+CONFIG_PM_DEVICE=y
+
+# Writing to flash
+CONFIG_FLASH=y
+CONFIG_FLASH_PAGE_LAYOUT=y
+CONFIG_MPU_ALLOW_FLASH_WRITE=y
+CONFIG_SOC_FLASH_NRF_EMULATE_ONE_BYTE_WRITE_ACCESS=y
 
 # Debugging configuration
 # CONFIG_DEBUG=y
