--- a/app/prj.conf
+++ b/app/prj.conf
@@ -27,8 +27,8 @@ CONFIG_ADC_NRFX_SAADC=y
 
 # SPI
 CONFIG_GPIO=y
-CONFIG_SPI=y
-CONFIG_SPI_SLAVE=y
+#CONFIG_SPI=y
+#CONFIG_SPI_SLAVE=y
 
 # CONFIG_SPI_NRFX=y
 # CONFIG_SPI_SLAVE=y
@@ -54,8 +54,8 @@ CONFIG_TIMESLICE_PRIORITY=0
 CONFIG_LOG=y
 
 # Power Management
-CONFIG_PM=y
-CONFIG_PM_DEVICE=y
+#CONFIG_PM=y
+#CONFIG_PM_DEVICE=y
 
 # Writing to flash
 CONFIG_FLASH=y
