--- a/app/prj.conf
+++ b/app/prj.conf
@@ -15,7 +15,7 @@ CONFIG_BT_DIS_MANUF="OriLive"
 CONFIG_BT_DIS_HW_REV=y
 CONFIG_BT_DIS_HW_REV_STR="0.2"
 CONFIG_BT_DIS_FW_REV=y
-CONFIG_BT_DIS_FW_REV_STR="Q4 2023"
+CONFIG_BT_DIS_FW_REV_STR="Q1 2024"
 
 # BLE Battery Service
 CONFIG_BT_BAS=y
@@ -77,3 +77,5 @@ CONFIG_SOC_FLASH_NRF_EMULATE_ONE_BYTE_WRITE_ACCESS=y
 # CONFIG_ASSERT_NO_COND_INFO=n
 # CONFIG_ASSERT_NO_MSG_INFO=n
 # CONFIG_RESET_ON_FATAL_ERROR=n
+
+CONFIG_BT_CTLR_ULL_HIGH_PRIO=2
