--- a/app/prj.conf
+++ b/app/prj.conf
@@ -54,8 +54,8 @@ CONFIG_TIMESLICE_PRIORITY=0
 CONFIG_LOG=y
 
 # Power Management
-#CONFIG_PM=y
-#CONFIG_PM_DEVICE=y
+CONFIG_PM=y
+CONFIG_PM_DEVICE=y
 
 # Writing to flash
 CONFIG_FLASH=y
