--- a/app/prj.conf
+++ b/app/prj.conf
@@ -41,18 +41,21 @@ CONFIG_ENTROPY_GENERATOR=y
 
 # Multithreading configuration
 # -- Timeslicing prevents a single thread from starving other threads of CPU time.
-CONFIG_TIMESLICING=y
+#CONFIG_TIMESLICING=y
 # -- In ms, the maximum amount of time a thread can run before forced to yield.
-CONFIG_TIMESLICE_SIZE=10
+#CONFIG_TIMESLICE_SIZE=10
 # -- The priority treshold for time slicing (priorities below this value will not be timesliced).
-CONFIG_TIMESLICE_PRIORITY=0
+#CONFIG_TIMESLICE_PRIORITY=0
 
 # Stack size configuration
 # CONFIG_MPSL_WORK_STACK_SIZE=4096
-# CONFIG_MAIN_STACK_SIZE=4096
+CONFIG_MAIN_STACK_SIZE=4096
 
 # Logging configuration
 CONFIG_LOG=y
+
+#Watchdog configuration
+CONFIG_WATCHDOG=y
 
 # Power Management
 CONFIG_PM=y
