prepare for DFU, increase connection limit

--- a/app/CMakeLists.txt
+++ b/app/CMakeLists.txt
@@ -14,3 +14,8 @@ target_sources(app PRIVATE
 # Include all component header files
 target_include_directories(app PRIVATE src/components)
 
+# Set the path to the pm_static.yml file
+set(PM_STATIC_YML_FILE pm_static.yml)
+
+# Include the pm_static.yml file for MCUboot
+set_property(GLOBAL PROPERTY PROPERTY_PM_STATIC_YML_FILE ${PM_STATIC_YML_FILE})
