--- a/app/prj.conf
+++ b/app/prj.conf
@@ -4,10 +4,12 @@ CONFIG_BT_DEVICE_NAME="O-Invader"
 CONFIG_BT_PERIPHERAL=y
 CONFIG_BT_USER_DATA_LEN_UPDATE=y
 CONFIG_BT_CTLR_DATA_LENGTH_MAX=251
-CONFIG_BT_BUF_ACL_RX_SIZE=251
+CONFIG_BT_BUF_ACL_RX_SIZE=502
 CONFIG_BT_BUF_ACL_TX_SIZE=251
-CONFIG_BT_L2CAP_TX_MTU=128
+CONFIG_BT_L2CAP_TX_MTU=252
 CONFIG_BT_CTLR_ULL_HIGH_PRIO=2
+CONFIG_BT_MAX_CONN=3
+
 
 # BLE Device information service
 CONFIG_BT_DIS=y
@@ -26,18 +28,8 @@ CONFIG_ADC=y
 CONFIG_ADC_ASYNC=y
 CONFIG_ADC_NRFX_SAADC=y
 
-# SPI
+# GPIO
 CONFIG_GPIO=y
-#CONFIG_SPI=y
-#CONFIG_SPI_SLAVE=y
-
-# CONFIG_SPI_NRFX=y
-# CONFIG_SPI_SLAVE=y
-# CONFIG_SPI_ASYNC=y
-
-# Random number generator
-CONFIG_TEST_RANDOM_GENERATOR=y
-CONFIG_ENTROPY_GENERATOR=y
 
 # Multithreading configuration
 # -- Timeslicing prevents a single thread from starving other threads of CPU time.
@@ -48,8 +40,8 @@ CONFIG_ENTROPY_GENERATOR=y
 #CONFIG_TIMESLICE_PRIORITY=0
 
 # Stack size configuration
-# CONFIG_MPSL_WORK_STACK_SIZE=4096
 CONFIG_MAIN_STACK_SIZE=4096
+CONFIG_SYSTEM_WORKQUEUE_STACK_SIZE=4096
 
 # Logging configuration
 CONFIG_LOG=y
@@ -66,6 +58,16 @@ CONFIG_FLASH=y
 CONFIG_FLASH_PAGE_LAYOUT=y
 CONFIG_MPU_ALLOW_FLASH_WRITE=y
 CONFIG_SOC_FLASH_NRF_EMULATE_ONE_BYTE_WRITE_ACCESS=y
+
+# OTA DFU Updates
+#CONFIG_MCUMGR=y
+#CONFIG_MCUMGR_GRP_IMG=y
+#CONFIG_BOOTLOADER_MCUBOOT=y
+#CONFIG_MCUMGR_TRANSPORT_BT=y
+#CONFIG_MCUMGR_TRANSPORT_BT_AUTHEN=n
+#CONFIG_NCS_SAMPLE_MCUMGR_BT_OTA_DFU=y
+#CONFIG_DISABLE_FLASH_PATCH=y
+
 
 # Debugging configuration
 # CONFIG_DEBUG=y
